--- a/_config.yml
+++ b/_config.yml
@@ -293,7 +293,7 @@ defaults:
       type: posts
     values:
       layout: splash
-      author_profile: 
+      author_profile: true
       read_time: true
       comments: true
       share: true
