--- a/_config.yml
+++ b/_config.yml
@@ -292,7 +292,7 @@ defaults:
       path: ""
       type: posts
     values:
-      layout: splash
+      layout: single
       author_profile: true
       read_time: true
       comments: true
@@ -304,7 +304,7 @@ defaults:
       path: ""
       type: posts
     values:
-      layout: splash
+      layout:
       author_profile: 
 
   # _cursos
