--- a/_config.yml
+++ b/_config.yml
@@ -325,3 +325,6 @@ collections:
   equipo:
     output: true
     permalink: /:collection/:path/
+  Blog:
+    output: true
+    permalink: /:collection/:path/    
