--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,7 +1,7 @@
 # /_data/authors.yml
 
 Esteban Londono:
-  name        : "Esteban Londono"
+  name        : "Esteban Londoño"
   avatar      : "/assets/images/equipo/esteban.jpg"
   bio         : "Business Intelligence Expert."
   location    : "Cali, Colombia"  
