--- a/_config.yml
+++ b/_config.yml
@@ -131,18 +131,15 @@ author:
 # Site Footer
 footer:
   links:
+    - label: "(+57)318 388 31 45"
+      icon: "fab fa-fw fa-whatsapp"
+      url: "https://api.whatsapp.com/send?phone=573183883145&text=Hola,%20quiero%20conocer%20mas%20sobre%20sus%20servicios"
+    - label: "cepobia@cepobia.com"
+      icon: "fab fa-fw fa-envelope"
+      url: "mailto:cepobia@cepobia.com"
     - label: "Linkedin"
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/company/cepobia/about/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/cepobia"
-    - label: "(+57)318 388 31 45"
-      icon: "fab fa-fw fa-whatsapp"
-      url: "https://api.whatsapp.com/send?phone=573183883145&text=Hola,%quiero%conocer%mas%sobre%sus%servicios"
-    - label: "Facebook"
-      icon: "fab fa-fw fa-facebook-square"
-      # url:
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
       # url:
