--- a/_config.yml
+++ b/_config.yml
@@ -135,7 +135,7 @@ footer:
       icon: "fab fa-fw fa-whatsapp"
       url: "https://api.whatsapp.com/send?phone=573183883145&text=Hola,%20quiero%20conocer%20mas%20sobre%20sus%20servicios"
     - label: "cepobia@cepobia.com"
-      icon: "fab fa-fw fa-envelope"
+      icon: "fab fa-fw fa-email"
       url: "mailto:cepobia@cepobia.com"
     - label: "Linkedin"
       icon: "fab fa-fw fa-linkedin"
