--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,14 +4,14 @@ main:
     url: /consultoria/
   - title: "Entrenamiento"
     url: /entrenamiento/
-  - title: "BI como Servicio"
-    url: /BIaaS/
   - title: "Demos"
     url: /casos/
   - title: "Blog"
     url: /blog/
   - title: "Nosotros"
     url: /about/
+  - title: Login
+    url: /Login/  
 
 
 
