--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,14 +4,15 @@ main:
     url: /consultoria/
   - title: "Entrenamiento"
     url: /entrenamiento/
+  - title: BIAPP
+    url: /BIaaS/  
   - title: "Demos"
     url: /casos/
   - title: "Blog"
     url: /blog/
   - title: "Nosotros"
     url: /about/
-  - title: Login
-    url: /Login/  
+
 
 
 
