--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
 main:
   - title: Biapp
     url: /BIaaS/   
-  - title: "Consultoria"
+  - title: "Consultoría"
     url: /consultoria/
   - title: "Entrenamiento"
     url: /entrenamiento/
