--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,7 +3,7 @@
 Esteban Londono:
   name        : "Esteban Londoño"
   avatar      : "/assets/images/equipo/esteban.jpg"
-  bio         : "Business Intelligence Expert."
+  bio         : "Científico de Datos"
   location    : "Cali, Colombia"  
   links:
     - label: "Email"
