--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,8 +10,8 @@ main:
     url: /casos/
   - title: "Blog"
     url: /blog/
-  - title: "Nosotros"
-    url: /about/
+  #- title: "Nosotros"
+  #  url: /about/
   - title: "Contáctanos"
     url: /contacto/
 
