--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,6 +14,8 @@ main:
     url: /about/
   - title: "Covid 19"
     url: /covid19/
+  - title: "CHIME"
+    url: /chime/
   #- title: "Contáctanos"
   #  url: /contacto/
 
