--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -34,7 +34,7 @@ Juan Carlos:
 
 Juan Gabriel:
   name        : "Juan Gabriel Sanchez"
-  avatar      : "/assets/images/equipo/Juan Carlos.jpg"
+  avatar      : "/assets/images/equipo/Juan.jpeg"
   bio         : "Project Manager"
   location    : "Cali, Colombia"  
   links:
