--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -33,7 +33,7 @@ Juan Carlos:
       url: "https://github.com/JuanPelaezReyes"
 
 Juan Gabriel:
-  name        : "Juan Gabriel Sanchez"
+  name        : "Juan Gabriel Sánchez"
   avatar      : "/assets/images/equipo/juan.jpeg"
   bio         : "Project Manager"
   location    : "Cali, Colombia"  
