--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -50,7 +50,7 @@ Juan Gabriel:
 
 Juan David :
   name        : "Juan David Angel"
-  bio         : "Business Intelligence Analyst"
+  bio         : "Business Intelligence Analytics"
   avatar      : "assets/images/equipo/David.jpg"
   links:
     - label: "Email"
