--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ baseurl                  : # "/blog" the subpath of your site, e.g.
 repository               : "cepobia/cepobia.github.io"  # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : /assets/images/logos/cepobia.png # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : #/assets/images/simbolo80x80.png
-breadcrumbs              : true # true, false (default)
+breadcrumbs              : false # true, false (default)
 words_per_minute         : 200
 comments:
   provider               : "disqus" # false (default), "disqus", "discourse", "facebook", "google-plus", "staticman", "staticman_v2" "custom"
